# django-short-links

./: .gitignore  README.md  admin.py  apps.py  forms.py  models.py  pyproject.toml  urls.py  views.py
links/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
links/migrations/: 0001_initial.py  0002_url_user_alter_url_token_alter_url_url.py
links/templates/links/: base.html  create.html  delete.html  detail.html  index.html  list.html  update.html
links/templates/links/components/: delete-modal.html  messages.html  navbar.html  url.html
links/templates/registration/: logged_out.html  login.html
migrations/: 0001_initial.py  0002_url_clicks_alter_url_shortened_alter_url_url.py
templates/registration/: login.html
templates/url_cutter/: base.html  detail.html  index.html
