[tool.poetry]
name = "django-short-links"
version = "0.1.3"
description = "URL shortener Django app"
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "links" }]
homepage = "https://github.com/youzarsiph/django-short-links/"
repository = "https://github.com/youzarsiph/django-short-links/"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
